--- a/notebooks/FL_client.ipynb
+++ b/notebooks/FL_client.ipynb
@@ -398,7 +398,7 @@
         "\n",
         "    if i == 0:\n",
         "        #print(debug)\n",
-        "        global_model = FedAvg([client[\"model\"] for client in clients], client_weights,global_model)\n",
+        "        global_model = FL_server.FedAvg([client[\"model\"] for client in clients], client_weights,global_model)\n",
         "        prev_metrics = curr_metrics\n",
         "    else:\n",
         "        improved_client_indices = [\n",
@@ -409,7 +409,7 @@
         "        if improved_client_indices:\n",
         "            #print(debug)\n",
         "            client_models = [clients[index][\"model\"] for index in improved_client_indices]\n",
-        "            global_model = FedAvg(client_models,client_weights,global_model)\n",
+        "            global_model = FL_server.FedAvg(client_models,client_weights,global_model)\n",
         "            prev_metrics = curr_metrics\n",
         "\n",
         "    # Update the models of all clients to the global model\n",
